--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a class="nav-link btn btn-outline-primary" asp-area="" asp-controller="User" asp-action="Index">Account</a>
+                            }
+                            else
+                            {
+                                <a class="nav-link btn btn-outline-primary" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                            }
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
