--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,17 +24,17 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li>s
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             @if (User.Identity.IsAuthenticated)
                             {
-                                <a class="nav-link btn btn-outline-primary" asp-area="" asp-controller="User" asp-action="Index">Account</a>
+                                <a class="nav-link btn btn-outline-primary" asp-area="" asp-controller="Account" asp-action="Dashboard">Account</a>
                             }
                             else
                             {
-                                <a class="nav-link btn btn-outline-primary" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                                <a class="nav-link btn btn-outline-primary" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             }
                         </li>
                     </ul>
