--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="hero-section">
+    <a href="/Reserveren" class="custom-reserve-btn btn-lg reserveer-knop">Reserveer een tafel</a>
+    <div class="info-box">
+        <h5>Openingstijden</h5>
+        <ul class="list-unstyled mb-2">
+            <li>Ma: Gesloten</li>
+            <li>Di-Vr: 12:00 - 22:00</li>
+            <li>Za-Zo: 14:00 - 23:00</li>
+        </ul>
+        <h5>Adres</h5>
+        <address>
+            Straat 123<br />
+            1234 Stad<br />
+            België
+        </address>
+    </div>
 </div>
