Onnodige API controller verwijderd en landnaam laten zien bij bevestiging ipv ID

--- a/Views/Account/RegistratieBevestigen.cshtml
+++ b/Views/Account/RegistratieBevestigen.cshtml
@@ -24,7 +24,7 @@
                 <dt class="col-sm-4">Gemeente</dt>
                 <dd class="col-sm-8">@Model.Gemeente</dd>
                 <dt class="col-sm-4">Land</dt>
-                <dd class="col-sm-8">@Model.Land</dd>
+                <dd class="col-sm-8">@Model.LandNaam</dd>
             </dl>
             <input type="hidden" asp-for="Email" />
             <input type="hidden" asp-for="Voornaam" />
