--- a/Views/Account/Dashboard.cshtml
+++ b/Views/Account/Dashboard.cshtml
@@ -14,6 +14,10 @@
             <a asp-controller="Tafel" asp-action="Index" class="btn btn-primary mt-3 ms-2">
                 Tafels beheren
             </a>
+
+            <a asp-controller="Reservation" asp-action="Toewijzen" class="btn btn-primary mt-3 ms-2">
+                Tafels toewijzen
+            </a>
         }
     }
 </div>
