--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="hero-section">
-    <a href="/Reserveren" class="custom-reserve-btn btn-lg reserveer-knop">Reserveer een tafel</a>
+    <a asp-controller="Reservation" asp-action="Create" class="reserveer-knop">Reserveer een tafel</a>
     <div class="info-box">
         <h5>Openingstijden</h5>
         <ul class="list-unstyled mb-2">
