--- a/Views/Tafel/Index.cshtml
+++ b/Views/Tafel/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create" class="btn btn-primary mb-3">Nieuwe tafel toevoegen</a>
 </p>
 
-<table class="table table-striped table-bordered align-middle">
+<table class="table tafel-table align-middle">
     <thead class="table-dark">
         <tr>
             <th scope="col">Tafelnummer</th>
