--- a/Views/Account/Dashboard.cshtml
+++ b/Views/Account/Dashboard.cshtml
@@ -16,6 +16,10 @@
             <a asp-controller="Reservation" asp-action="Toewijzen" class="btn btn-primary mt-3 ms-2">
                 Tafels toewijzen
             </a>
+
+            <a asp-controller="Reservation" asp-action="Index" class="btn btn-primary mt-3 ms-2">
+                Reservaties bekijken
+            </a>
         }
     }
 </div>
