--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="~/Restaurant.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body data-user-role="@User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value">
+<body data-user-role="@User.FindFirst(System.Security.Claims.ClaimTypes.Role)?.Value"
+      data-user-name="@User.Identity.Name">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -26,6 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.IsInRole("Kok") || User.IsInRole("Ober") || User.IsInRole("Eigenaar"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Bestelling" asp-action="Index">Bestellingen</a>
+                            </li>
+                        }
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
