--- a/Views/Rekening/Overzicht.cshtml
+++ b/Views/Rekening/Overzicht.cshtml
@@ -1,1 +1,5 @@
-﻿
+﻿@model Restaurant.ViewModels.Rekening.OverzichtViewModel;
+@{
+    ViewData["Title"] = "Rekening Overzicht";
+}
+<h1>@ViewData["Title"]</h1>
