--- a/Views/Bestelling/Index.cshtml
+++ b/Views/Bestelling/Index.cshtml
@@ -83,10 +83,10 @@
                 </form>
             </div>
             <div class="col-1">
-                <a asp-controller="Bestelling" asp-action="Bewerken" asp-route-id="@bestelling.Id"
+                @* <a asp-controller="Bestelling" asp-action="Bewerken" asp-route-id="@bestelling.Id"
                    class="btn btn-link p-0 ms-2" title="Bewerken">
                     <i class="bi bi-pencil-fill text-black"></i>
-                </a>
+                </a> *@
             </div>
         </div>
     </div>
