--- a/Views/Rekening/Bevestiging.cshtml
+++ b/Views/Rekening/Bevestiging.cshtml
@@ -12,5 +12,10 @@
                 <p class="mb-0">De betaling voor reservatie <strong>#@reservatieId</strong> is bevestigd.</p>
             </div>
         </div>
+        <div class="text-center">
+            <a href="/Reservaties/Index" class="btn btn-warning">
+                Terug naar reservaties
+            </a>
+        </div>
     </div>
 </div>
